--- a/pictures/index.html
+++ b/pictures/index.html
@@ -21,10 +21,10 @@ permalink: /pictures
     <title>Thumbnail Gallery - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://jekyllblogjs.s3.amazonaws.com/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/assets/css/thumbnail-gallery.css" rel="stylesheet">
+    <link href="http://jekyllblogjs.s3.amazonaws.com/thumbnail-gallery.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -115,32 +115,17 @@ permalink: /pictures
 
 
 
-      
+
 
 
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="http://jekyllblogjs.s3.amazonaws.com/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/http://jekyllblogjs.s3.amazonaws.com/bootstrap.min.js"></script>
 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
